[tool.poetry]
name = "pysaber"
version = "0.1.0"
description = ""
authors = ["Szymon Idec <szymon.idec@protonmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
main = "pysaber.main:main"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^42.0.7"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
